--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^7.7.5",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/accordion": "^1.2.0",
     "@rn-primitives/alert-dialog": "^1.2.0",
@@ -39,6 +40,7 @@
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
     "expo-linking": "~8.0.8",
+    "expo-navigation-bar": "^5.0.9",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -48,6 +50,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-appwrite": "^0.18.0",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
