--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo": "^54.0.0",
     "expo-asset": "^12.0.10",
     "expo-gl": "^16.0.7",
+    "expo-image": "^3.0.10",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "^5.0.9",
